--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,67 @@
+.container {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+nav {
+	background-color: grey;
+	position: fixed;
+	width:100%;
+	height:80px;
+}
+
+nav .icon-img {
+	height:60px;
+	border-radius: 50%;
+	border: 1px solid black;
+	vertical-align: middle;
+	margin: 10px 0 5px 20px;
+}
+
+.items {
+  	text-align: left;
+  	display: inline-block;
+}
+
+.items li {
+	font-size: 20px;
+	display: inline-block;
+	left:20px;
+}
+
+.items li::after{
+	content:'|';
+	padding:4px;
+
+}
+
+body {
+	background: url(../images/outerspace_landscape.jpeg) no-repeat;
+	background-size: cover;
+}
+
+.box {
+  margin-top: 150px;
+  width: 600px;
+  height: 300px;
+  position: relative;
+  border: 10px dotted green;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.spacecat, .spacedog {
+  position: absolute;
+  width: 200px;
+}
+
+.spacecat {
+  top: -90px;
+  left: -90px;
+}
+
+.spacedog {
+  bottom: -120px;
+  right: -60px;
+}
 
