--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,15 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+img {
+
+	height:300px;
+}
+
+.left {
+	float: left;
+}
+.right {
+	float: right;
+}
